fix: CSS on mobile

--- a/src/css/timeline.module.css
+++ b/src/css/timeline.module.css
@@ -90,4 +90,8 @@
         border-color: transparent var(--primary, #f45b69) transparent
             transparent;
     }
+
+    .timeline ul:first-child::before {
+        left: 43px;
+    }
 }
